Update CMRITLeaderboard2025.java